--- a/package.json
+++ b/package.json
@@ -1,7 +1,8 @@
 {
   "dependencies": {
-    "littlejsengine": "^1.9.11",
+    "littlejsengine": "^1.11.8",
     "three": "^0.170.0",
+    "vite": "^6.3.5",
     "zzfx": "^1.3.0"
   }
 }
