--- a/package.json
+++ b/package.json
@@ -1,8 +1,20 @@
 {
+  "name": "Simulation Web Game",
+  "version": "1.0.0",
+  "description": "",
+  "main": "index.html",
+  "scripts": {
+    "dev": "vite",
+    "build": "vite build",
+    "preview": "vite preview"
+  },
   "dependencies": {
     "littlejsengine": "^1.11.8",
     "three": "^0.170.0",
-    "vite": "^6.3.5",
     "zzfx": "^1.3.0"
+  },
+  "devDependencies": {
+    "@types/three": "^0.178.1",
+    "vite": "^6.3.5"
   }
 }
