--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "Simulation Web Game",
+  "name": "simulation-web-game",
   "version": "1.0.0",
   "description": "",
   "main": "index.html",
